Logo and menu spacing Added 5px to navbar-collapse. Fixes FF active/focus border touching the logo. Try as I might, I cannot get FF 30 to stop with the dashed boarder around the active menu item.

--- a/awx/ui/static/less/main-layout.less
+++ b/awx/ui/static/less/main-layout.less
@@ -34,7 +34,7 @@ body {
         }
     }
     .navbar-collapse {
-        margin-left: 42px;
+        margin-left: 47px;
     }
     .collapsed-option {
         display: none;
